--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.sources=.
 # Inclure les fichiers à analyser
 sonar.inclusions=**/*.py
 # Exclure les fichiers ou répertoires de l'analyse
-sonar.exclusions=**/env_tp/**
+sonar.exclusions=**/env_tq/**
 # Language du projet
 sonar.language=python
 # Désactiver le capteur SCM
